<resources>
    <string name="app_name">SNS_App</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="mypage">MyPage</string>
    <string name="myPage_post">게시물</string>
    <string name="myPage_follower">팔로워</string>
    <string name="myPage_following">팔로잉</string>
    <string name="myPage_editProfile">프로필 사진 편집</string>
    <string name="myPage_signOut">로그아웃</string>
    <string name="signUp">회원가입</string>
    <string name="welcome_msg">환영합니다!</string>
    <string name="nick_hint">닉네임을 입력하세요 (최소 2자~최대 5자)</string>
    <string name="pwd_hint">비밀번호를 입력하세요 (6자~10자)</string>
    <string name="birth">생년월일 (2000-01-01)</string>
    <string name="select_birth">날짜선택</string>
    <string name="email_hint">이메일을 입력하세요</string>
    <string name="signUpBtn">가입하기</string>
    <string name="post_edit_option">⋮</string>
</resources>